--- a/style.css
+++ b/style.css
@@ -1,19 +1,45 @@
 body{
   margin : 0;
-  text-align: center;
 }
-.d1{
-    height: 50px;
 
-    background-color:      #99f3bd;
+H1{
+  float: left;
+  letter-spacing: 5px;
+  font-size: 20px;
+  margin: 0 10px;
+  text-decoration: none;
+  font-family: cursive;
+  color: #fff;
+}
+nav a{
+  float: right;
+  letter-spacing: 5px;
+  font-size: 20px;
+  margin: 0 10px;
+  text-decoration: none;
+  font-family: cursive;
+  color: #fff;
+}
 
+.d1
+{
+height: 50px;
+width: 100%;
+background-color:      #99f3bd;
+margin:0;
+position:fixed;
+z-index: 10;
 }
 
 .d2{
   position : relative;
+  top : 50px;
+  margin:0;
   height: 500px;
   width: 100%;
   background-color: #d2f6c5;
+  z-index: 5;
+
 
 
   }
@@ -24,9 +50,27 @@ body{
   left: 20%;
   transition: transform .2s;
 
-
 }
 
 .d3:hover{
-  transform: scale(1.5);
+  transform:  scale(1.5);
+}
+
+ .d4{
+  position: relative;
+
+  width: 100%;
+  height: 500px;
+  background-color: #f6f7d4;
+}
+
+.d5{
+  position: absolute;
+  transition: transform .2s;
+  top: 101px;
+  left : 20%;
+}
+
+.d5:hover{
+  transform:  scale(1.5);
 }
