--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ z-index: 10;
   margin:0;
   height: 500px;
   width: 100%;
-  background-color: #d2f6c5;
+  background-color: #007965;
   z-index: 5;
   }
 
@@ -58,7 +58,7 @@ z-index: 10;
 
   width: 100%;
   height: 500px;
-  background-color: #f6f7d4;
+  background-color: #00af91;
 }
 
 .d5{
